--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -2,6 +2,20 @@
 
 # defaults for the WLAN Driver
 
+# ifdef VENDOR_EDIT
+gInitialScanNoDFSChnl=1
+gInitialDwellTime=20
+RoamRssiDiff=5
+gEnable2x2=0
+g11dSupportEnabled=1
+gSoftApMaxPeers=8
+gRAFilterEnable=0
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+RTSThreshold=117350
+gTcpDelAckThresholdHigh=10000
+gDroppedPktDisconnectTh=1024
+# endif /* VENDOR_EDIT */
 
 # Enable IMPS or not
 gEnableImps=1
@@ -142,7 +156,9 @@ gFixedRate=0
 
 # RTS threshold
 
-RTSThreshold=1048576
+#ifdef VENDOR_EDIT
+#RTSThreshold=1048576
+#endif VENDOR_EDIT
 
 
 # Intra-BSS forward
@@ -157,7 +173,9 @@ WmmIsEnabled=0
 
 # 802.11d support
 
-g11dSupportEnabled=0
+#ifdef VENDOR_EDIT
+#g11dSupportEnabled=0
+#endif VENDOR_EDIT
 
 # 802.11h support
 
@@ -186,7 +204,9 @@ FastRoamEnabled=1
 #Check if the AP to which we are roaming is better than current AP in terms of RSSI.
 #Checking is disabled if set to Zero.Otherwise it will use this value as to how better
 #the RSSI of the new/roamable AP should be for roaming
-RoamRssiDiff=3
+#ifdef VENDOR_EDIT
+#RoamRssiDiff=3
+#endif VENDOR_EDIT
 
 # If the RSSI of any available candidate is better than currently associated
 # AP by at least gImmediateRoamRssiDiff, then being to roam immediately (without
@@ -365,7 +385,9 @@ gVhtTxMCS=2
 # VHT Tx/Rx MCS values for 2x2
 # Valid values are 0,1,2. If commented out, the default value is 0.
 # 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
-gEnable2x2=1
+#ifdef VENDOR_EDIT
+#gEnable2x2=1
+#endif VENDOR_EDIT
 gVhtRxMCS2x2=2
 gVhtTxMCS2x2=2
 
@@ -583,7 +605,9 @@ gSapSccChanAvoidance=0
 # help if the lifetime in RA is less than 3*60=3min. Then
 # we need to change it, though it is uncommon.
 # Enable RA filtering offload
-gRAFilterEnable=1
+#ifdef VENDOR_EDIT
+#gRAFilterEnable=1
+#endif VENDOR_EDIT
 gRArateLimitInterval=300
 
 # Inactivity time (in ms) to end TX Service Period while in IBSS power save mode
